Style the h4 used in the page. Fix table inconsisitencies

--- a/facilities/fitness-center/index.html
+++ b/facilities/fitness-center/index.html
@@ -132,7 +132,7 @@ _options:
                 </tbody>
             </table>
             <p>&nbsp;</p>
-            <h5>Student Options</h5>
+            <h4 class="blue-heading-small">Student Options</h4>
             <p>KCC students can choose to:</p>
             <ul>
                 <li>
@@ -156,9 +156,7 @@ _options:
                     </tr>
                     <tr class="mv-TableEvenRow-6">
                         <td class="mv-TableEvenCol-6">KCC students (as course enrollee)</td>
-                        <td class="mv-TableOddCol-6" valign="middle" align="center">
-                            <p>current tuition rate<br />for 1 credit hour<br />+ $20 fee</p>
-                        </td>
+                        <td class="mv-TableOddCol-6" valign="middle" align="center">current tuition rate<br />for 1 credit hour<br />+ $20 fee</td>
                         <td class="mv-TableEvenCol-6" valign="middle" align="center">current tuition rate<br />for 1 credit hour<br />+ $20 fee</td>
                     </tr>
                 </tbody>
