--- a/facilities/fitness-center/index.html
+++ b/facilities/fitness-center/index.html
@@ -1,5 +1,5 @@
 ---
-layout: page
+layout: noscriptpage
 baseurl: ../../
 base: facilities
 title: Fitness Center
@@ -39,13 +39,13 @@ _options:
     <div class="col-md-6">
       <ul class="nav justify-content-center">
         <li class="nav-item">
-          <a href="{{page.baseurl}}{{page.base}}/fitness-center/#membership" class="nav-link sub-nav-link">Membership</a>
+          <a href="{{page.baseurl}}{{page.base}}/fitness-center/#membership" id="my-link" class="nav-link sub-nav-link">Membership</a>
         </li>
         <li class="nav-item">
-          <a href="{{page.baseurl}}{{page.base}}/fitness-center/#personal-trainers" class="nav-link sub-nav-link">Personal Trainers & Staff</a>
+          <a href="{{page.baseurl}}{{page.base}}/fitness-center/#personal-trainers" id="my-link2" class="nav-link sub-nav-link">Personal Trainers & Staff</a>
         </li>
         <li class="nav-item">
-          <a href="{{page.baseurl}}{{page.base}}/fitness-center/#testimonials" class="nav-link sub-nav-link">Testimonials</a>
+          <a href="{{page.baseurl}}{{page.base}}/fitness-center/#testimonials" id="my-link3" class="nav-link sub-nav-link">Testimonials</a>
 
         </li>
       </ul>
@@ -72,199 +72,10 @@ _options:
             <p>The KCC Fitness Center offers total body fitness to KCC students as well as members of the community. The 3,500 square-foot facility features state-of-the-art equipment from Life Fitness, the No. 1 brand of fitness equipment in health clubs worldwide, offering a full range of training options.</p>
             <p>Monthly and annual membership packages are available for individuals, families and couples. KCC students can enroll for college credit. KCC&rsquo;s athletes also use the center as part of their training. For more information, phone 815-802-8610.</p>
             <p>&nbsp;</p>
-            <h2 id="membership" name="membership" class="main-heading">Become a Member</h2>
-            <p>Sign up at KCC's Accounting Office (second floor of the college) and at the Fitness Center, located in the Ice Valley Centre at 1601 River Road, Kankakee.</p>
-            <h2>&nbsp;</h2>
-            <h3 class="blue-heading"><strong>Membership Options</strong></h3>
-            <p>KCC offers the following membership packages to non-student members of the community.</p>
-            <table class="mv-Table-6" cellspacing="0" cellpadding="3" bordercolor="#808080" border="1">
-                <tbody>
-                    <tr class="mv-TableHeaderRow-6">
-                        <th class="mv-TableHeaderEvenCol-6" rowspan="1" colspan="1">Package</th>
-                        <th class="mv-TableHeaderOddCol-6" rowspan="1" colspan="1">Monthly</th>
-                        <th class="mv-TableHeaderEvenCol-6" rowspan="1" colspan="1">Annual</th>
-                    </tr>
-                    <tr class="mv-TableOddRow-6">
-                        <td class="mv-TableEvenCol-6">Individual (16 - 59 yrs.)</td>
-                        <td class="mv-TableOddCol-6" valign="middle" align="center">$25</td>
-                        <td class="mv-TableEvenCol-6" valign="middle" align="center">$275</td>
-                    </tr>
-                    <tr class="mv-TableEvenRow-6">
-                        <td class="mv-TableEvenCol-6">Couple</td>
-                        <td class="mv-TableOddCol-6" valign="middle" align="center">$45</td>
-                        <td class="mv-TableEvenCol-6" valign="middle" align="center">$495</td>
-                    </tr>
-                    <tr class="mv-TableOddRow-6">
-                        <td class="mv-TableEvenCol-6">Family (up to 2 parents and 3 children,<br />16 yrs. and older)</td>
-                        <td class="mv-TableOddCol-6" valign="middle" align="center">$80</td>
-                        <td class="mv-TableEvenCol-6" valign="middle" align="center">$880</td>
-                    </tr>
-                    <tr class="mv-TableEvenRow-6">
-                        <td class="mv-TableEvenCol-6">Additional dependent</td>
-                        <td class="mv-TableOddCol-6" valign="middle" align="center">$15</td>
-                        <td class="mv-TableEvenCol-6" valign="middle" align="center">$165</td>
-                    </tr>
-                    <tr class="mv-TableOddRow-6">
-                        <td class="mv-TableEvenCol-6">Senior (60 yrs. and older)</td>
-                        <td class="mv-TableOddCol-6" valign="middle" align="center">$9</td>
-                        <td class="mv-TableEvenCol-6" valign="middle" align="center">$99</td>
-                    </tr>
-                    <tr class="mv-TableEvenRow-6">
-                        <td class="mv-TableEvenCol-6">U.S. military veterans</td>
-                        <td class="mv-TableOddCol-6" valign="middle" align="center">$9</td>
-                        <td class="mv-TableEvenCol-6" valign="middle" align="center">$99</td>
-                    </tr>
-                    <tr class="mv-TableOddRow-6">
-                        <td class="mv-TableEvenCol-6">KCC graduates</td>
-                        <td class="mv-TableOddCol-6" valign="middle" align="center">$20</td>
-                        <td class="mv-TableEvenCol-6" valign="middle" align="center">$220</td>
-                    </tr>
-                    <tr class="mv-TableEvenRow-6">
-                        <td class="mv-TableEvenCol-6" rowspan="1">​KCC staff</td>
-                        <td class="mv-TableOddCol-6" rowspan="1" valign="middle" align="center">Free​</td>
-                        <td class="mv-TableEvenCol-6" rowspan="1" valign="middle" align="center">​</td>
-                    </tr>
-                    <tr class="mv-TableOddRow-6">
-                        <td class="mv-TableEvenCol-6">Daily Pass</td>
-                        <td class="mv-TableOddCol-6" valign="middle" align="center">$5/day</td>
-                        <td class="mv-TableEvenCol-6" valign="middle" align="center">&nbsp;</td>
-                    </tr>
-                </tbody>
-            </table>
-            <p>&nbsp;</p>
-            <h4 class="blue-heading-small">Student Options</h4>
-            <p>KCC students can choose to:</p>
-            <ul>
-                <li>
-                    <p>sign up as a member</p>
-                </li>
-                <li>
-                    <p>enroll in the fitness center course and earn college credit</p>
-                </li>
-            </ul>
-            <table class="mv-Table-6" cellspacing="0" cellpadding="3" bordercolor="#808080" border="1">
-                <tbody>
-                    <tr class="mv-TableHeaderRow-6">
-                        <th class="mv-TableHeaderEvenCol-6" rowspan="1" colspan="1">Option<span>​</span><span>​</span></th>
-                        <th class="mv-TableHeaderOddCol-6" rowspan="1" colspan="1">Spring or Fall</th>
-                        <th class="mv-TableHeaderEvenCol-6" rowspan="1" colspan="1">Summer</th>
-                    </tr>
-                    <tr class="mv-TableOddRow-6">
-                        <td class="mv-TableEvenCol-6">KCC students (as member)</td>
-                        <td class="mv-TableOddCol-6" valign="middle" align="center">$80</td>
-                        <td class="mv-TableEvenCol-6" valign="middle" align="center">$40</td>
-                    </tr>
-                    <tr class="mv-TableEvenRow-6">
-                        <td class="mv-TableEvenCol-6">KCC students (as course enrollee)</td>
-                        <td class="mv-TableOddCol-6" valign="middle" align="center">current tuition rate<br />for 1 credit hour<br />+ $20 fee</td>
-                        <td class="mv-TableEvenCol-6" valign="middle" align="center">current tuition rate<br />for 1 credit hour<br />+ $20 fee</td>
-                    </tr>
-                </tbody>
-            </table>
-            <p>&nbsp;</p>
-            <h3 class="blue-heading">Fitness Center for College Credit</h3>
-            <p>You can earn college credit for working out. Your workout schedule is up to you. After an initial orientation, there are no set meeting times. Work out as often as you'd like.</p>
-            <p>Cost</p>
-            <p>The Fitness Center class is the cost of one semester of college credit plus a $20 course fee.</p>
-            <p>Semesters are:</p>
-            <p>Fall: August - December</p>
-            <p>Spring: January - May</p>
-            <p>Summer: June - July</p>
-            <p>High school students earn college credit</p>
-            <p>For high school students, Fitness Center credits can be held in escrow until you graduate, then the credits can be applied as college credits at KCC or another college.</p>
-            <p>Registration</p>
-            <p>To join, register and pay at KCC's Department of Student Services, Riverfront Campus, 100 College Drive, Kankakee, Illinois.</p>
-            <p>First-time registration</p>
-            <p>Students enrolling in the Fitness Center course for the first time must schedule an assessment and orientation session. Contact the Fitness Center at 802-8610 to make an appointment.</p>
-            <p>Orientations usually begin about a week before the semester begins and must be complete before using the Fitness Center. To be considered enrolled in the course, students must begin Fitness Center sessions within the first week of the semester start date.</p>
-            <p>To re-enroll, <a target="_blank" href="/uploads/fitnesscenter-re-enroll.pdf">complete the re-enrollment form </a>(either online or by filling out a printed copy), print and bring with you when you register. Forms are also available in the Fitness Center and Student Services Department.</p>
-            <p>Personal fitness assessment and orientation</p>
-            <p>After you have registered, schedule your 60-minute orientation by phoning 815-802-8610 or stopping by the Fitness Center. Orientation times are 8:30 a.m., 10:30 a.m., 4 p.m. and 5:30 p.m.</p>
-            <p>A member of the Fitness Center staff will take you through a fitness assessment which includes: girth, height, weight, resting heart rate and body fat composition.</p>
-            <p>You will receive a tour of the Fitness Center and locker rooms along with an explanation of our 21 Life Fitness cable-assisted lifting machines.</p>
-            <p>Please allow 60 minutes for the assessment and orientation. The orientation counts toward your fitness center grade.</p>
-            <p>Grades</p>
-            <p>At registration you are asked to choose one of the following grade options:</p>
-            <p>Pass/Fail - to pass, complete 20 hours of exercise throughout the semester</p>
-            <p>Traditional letter grade - to receive an A, complete 25 hours or more of exercise throughout the semester</p>
-            <p>Your grade is based on the option you choose and the amount of time you exercise throughout the semester.</p>
-            <p>A - 25 hours or more</p>
-            <p>B - 22-24:59 hours</p>
-            <p>C - 20-21:59 hours</p>
-            <p>D - 17-19:59 hours</p>
-            <p>F - 16:59 hours or less</p>
-            <p>&nbsp;</p>
-            <h2 id="personal-trainers" name="personal-trainers" class="main-heading">Personal Trainers and Staff</h2>
-            <p>Our personal trainers can help you reach your fitness goals. In addition to being certified professionals and/or having the appropriate degrees, our trainers stay current with the latest fitness trends and training techniques.</p>
-            <p><img width="655" height="250" src="/uploads/dsc-0173-home.jpg" /></p>
-            <h5>Rates</h5>
-            <p>Training sessions are one hour. You will have an initial consultation to discuss specific fitness goals. Up to three people can participate in a session. Rates are:</p>
-            <table class="mv-Table-6" cellspacing="0" bordercolor="#808080" border="1">
-                <tbody>
-                    <tr class="mv-TableHeaderRow-6">
-                        <th class="mv-TableHeaderEvenCol-6" rowspan="1" colspan="1">​No. of Persons</th>
-                        <th class="mv-TableHeaderOddCol-6" rowspan="1" colspan="1">​1 session</th>
-                        <th class="mv-TableHeaderEvenCol-6" rowspan="1" colspan="1">​5 sessions</th>
-                        <th class="mv-TableHeaderOddCol-6" rowspan="1" colspan="1">​10 sessions</th>
-                    </tr>
-                    <tr class="mv-TableOddRow-6">
-                        <td class="mv-TableEvenCol-6" rowspan="1" colspan="1">​1</td>
-                        <td class="mv-TableOddCol-6">​$30</td>
-                        <td class="mv-TableEvenCol-6">$135​</td>
-                        <td class="mv-TableOddCol-6" colspan="1">$260​</td>
-                    </tr>
-                    <tr class="mv-TableEvenRow-6">
-                        <td class="mv-TableEvenCol-6" rowspan="1" colspan="1">​2</td>
-                        <td class="mv-TableOddCol-6">​$25/person</td>
-                        <td class="mv-TableEvenCol-6">$110/person​</td>
-                        <td class="mv-TableOddCol-6" colspan="1">​$210/person</td>
-                    </tr>
-                    <tr class="mv-TableOddRow-6">
-                        <td class="mv-TableEvenCol-6" rowspan="1" colspan="1">​3</td>
-                        <td class="mv-TableOddCol-6">​$20/person</td>
-                        <td class="mv-TableEvenCol-6">​$85/person</td>
-                        <td class="mv-TableOddCol-6" colspan="1">​$160/person</td>
-                    </tr>
-                </tbody>
-            </table>
-            <p>&nbsp;</p>
-            <h3 class="blue-heading"><strong>Why Personal Training?</strong></h3>
-            <p>Using a personal trainer will help you maximize your time and effort at the gym, giving you tremendous value.</p>
-            <ul>
-                <li>Reach your fitness goals faster</li>
-                <li>Achieve better results</li>
-                <li>Keep your workouts fresh and motivating</li>
-                <li>Save time with a thorough, pre-planned workout</li>
-            </ul>
-            <h3 class="blue-heading"><strong>Fitness Assessment</strong></h3>
-            <p>A fitness assessment evaluates physical fitness components such as height, weight, body fat composition, resting heart rate, balance, muscle strength and endurance. Cost is $35.</p>
-            <p>Questions/Appointments</p>
-            <p>Contact Yvonne Mills, personal trainer manager</p>
-            <h3 class="blue-heading"><strong>Staff</strong></h3>
-            <p><img width="200" height="250" src="/uploads/dsc-0659yvonne-mills.jpg" /></p>
-            <p><strong>Yvonne Mills </strong>&nbsp;</p>
-            <p>An ACE certified personal trainer and sports conditioning specialist, Yvonne has been making fitness fun for more than 20 years. Yvonne's experience includes: strength training, teaching aerobics, teaching kickboxing, and working as a personal and group trainer. She holds a black belt in Tang Soo Do and has competed in powerlifting and bodybuilding competitions.</p>
-            <p>Yvonne earned a bachelor&rsquo;s degree in physical education from Olivet Nazarene University.</p>
-            <p>815-802-8610<br /><a href="mailto:ymills@kcc.edu">ymills@kcc.edu</a></p>
-            <p>&nbsp;</p>
-            <p><img width="120" height="140" src="/uploads/candice-brackett-bio-page-2.jpg" /></p>
-            <p><strong>​Candice Brackett</strong></p>
-            <p>Fitness specialist, athletic trainer<br />815-802-8610<br /><a href="mailto:cbrackett@kcc.edu">cbrackett@kcc.edu</a></p>
-            <p>&nbsp;</p>
-            <p><img width="120" height="142" src="/uploads/dsc-0248-francine.jpg" /></p>
-            <p><strong>Francine Castongia</strong></p>
-            <p>Fitness specialist<br />815-802-8610<br /><a href="mailto:fcastongia@kcc.edu">fcastongia@kcc.edu</a></p>
-            <p>&nbsp;</p>
-            <h2 id="testimonials" name="testimonials" class="main-heading">Testimonials</h2>
-            <p>Read how our members reached their fitness goals at KCC's comfortable and well-equipped fitness center with the help of our knowledgeable, supportive personal trainers. &nbsp;</p>
-            <p>Lamanda Garcia<em><br />&ldquo;Yvonne was an amazing coach. She pushed me each class.&rdquo;</em></p>
-            <p>Donna Schmidt<em><br />&ldquo;I have lost inches, gained muscle mass and become much stronger with LESS aches and pain.&rdquo;</em></p>
-            <p>Carolyn Jacobson<em><br />&ldquo;...We know that having a safe and effective work-out propels you into a fuller and more rewarding life. And this is exactly what using KCC&rsquo;s Fitness Center and working with Yvonne have done for me. &rdquo;</em></p>
-            <p>John Kessler<em><br />&ldquo;After three months, I could tell that things were improving. After six months I feel stronger, my balance has improved and I've lost some weight.&rdquo;</em></p>
-            <p>Mike Wickliff<em><br />&ldquo;I recommend any athlete or person, to sign up for training sessions with Ms. Yvonne. I guarantee you will get better in the area you are trying to improve.&rdquo;</em></p>
-            <p>&nbsp;</p>
         </div>
       </div>
     </div>
   </div>
+</div>
+{% include accordian.html %}
 </main>
