Update accordian.js and fitness center links id's...
Change from id="my-link" and $('#my-link') to id="membershipLink" and $('#membershipLink')

--- a/facilities/fitness-center/index.html
+++ b/facilities/fitness-center/index.html
@@ -39,13 +39,13 @@ _options:
     <div class="col-md-6">
       <ul class="nav justify-content-center">
         <li class="nav-item">
-          <a href="{{page.baseurl}}{{page.base}}/fitness-center/#membership" id="my-link" class="nav-link sub-nav-link">Membership</a>
+          <a href="{{page.baseurl}}{{page.base}}/fitness-center/#membership" id="membershipLink" class="nav-link sub-nav-link">Membership</a>
         </li>
         <li class="nav-item">
-          <a href="{{page.baseurl}}{{page.base}}/fitness-center/#personal-trainers" id="my-link2" class="nav-link sub-nav-link">Personal Trainers & Staff</a>
+          <a href="{{page.baseurl}}{{page.base}}/fitness-center/#personal-trainers" id="personalTrainersLink" class="nav-link sub-nav-link">Personal Trainers & Staff</a>
         </li>
         <li class="nav-item">
-          <a href="{{page.baseurl}}{{page.base}}/fitness-center/#testimonials" id="my-link3" class="nav-link sub-nav-link">Testimonials</a>
+          <a href="{{page.baseurl}}{{page.base}}/fitness-center/#testimonials" id="testimonialsLink" class="nav-link sub-nav-link">Testimonials</a>
 
         </li>
       </ul>
